Ass_3/testing program using FIFO and thread/output.txt
code_file.cpp: In function ‘int main()’:
code_file.cpp:7:14: error: expected ‘;’ before ‘return’
    7 |     cout<<x+1
      |              ^
      |              ;
    8 |     return 0;
      |     ~~~~~~    
